STATUS
      * * * * * * * * * * * * * * * * * * * * * * * * * * * *
      *                                                     *
      *  THIS RELEASE STREAM IS OPEN FOR STABILIZATION.     *
      *                                                     *
      * * * * * * * * * * * * * * * * * * * * * * * * * * * *

This file tracks the status of releases in the 1.10.x line.

See http://subversion.apache.org/docs/community-guide/releasing.html#release-stabilization
for details on how release lines and voting work, what kinds of bugs can
delay a release, etc.

Status of 1.10.4:

Candidate changes:
==================

 * r1845212
   Silence a deprecation warning from amalgamated SQLite on macOS.
   Justification:
     Keeps the macOS warnings checker buildslave clean.
   Votes:
     +1: brane

 * r1846299
   Add resolver support for unversioned directories during update/switch.
   Justification:
     Support or unversioned files has already been backported.
     We should support directories as well for consistency.
   Branch:
     ^/subversion/branches/1.10.x-r1846299
   Votes:
     +1: stsp
     -1: brane (without r1846844) -- Needs backport branch:
     .../subversion/libsvn_client/conflicts.c:7726:13: error: implicit declaration of function
           'svn_wc_revert6' [-Werror,-Wimplicit-function-declaration]
           err = svn_wc_revert6(ctx->wc_ctx, local_abspath, svn_depth_infinity,
                 ^

Veto-blocked changes:
=====================

Approved changes:
=================

 * r1846704
   Fix SVN-4717 "tree conflict message ends a sentence with a colon".
   Justification:
     Misleading output from conflict resolver.
   Votes:
     +1: stsp, danielsh, brane
